@@ -155,6 +155,8 @@ local config = {
       'lpeg.lua',
       'mpack.lua',
       'net.lua',
+      'pos.lua',
+      'range.lua',
       're.lua',
       'regex.lua',
       'secure.lua',
@@ -193,6 +195,8 @@ local config = {
       'runtime/lua/vim/keymap.lua',
       'runtime/lua/vim/loader.lua',
       'runtime/lua/vim/net.lua',
+      'runtime/lua/vim/pos.lua',
+      'runtime/lua/vim/range.lua',
       'runtime/lua/vim/secure.lua',
       'runtime/lua/vim/shared.lua',
       'runtime/lua/vim/snippet.lua',
